--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -4,6 +4,9 @@
     },
     "extensions": {
         "@aws.profile": "profile:default",
+        "@git.autofetch": true,
+        "@git.confirmSync": false,
+        "@git.enableSmartCommit": true,
         "@json.schemas": []
     },
     "language": {
